<resources>
    <!-- TODO: Add more strings here -->

    <string name="app_name">FCard</string>

    <string name="menu_navigation_packages">Các gói từ</string>
    <string name="menu_navigation_learned">Từ đã thuộc</string>
    <string name="menu_navigation_hard">Từ khó</string>
    <string name="menu_navigation_share">Chia sẻ</string>
    <string name="menu_navigation_vote">Bình chọn</string>
    <string name="menu_navigation_feedback">Phản hồi</string>
    <string name="menu_navigation_reset">Thiết lập lại</string>
    <string name="menu_navigation_help">Hướng dẫn</string>
    <string name="menu_navigation_community">Cộng đồng</string>
    <string name="menu_navigation_setting">Cấu hình</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="foobar">#fffff</string>
    <string name="sharing_subject">Chia sẻ app hay</string>
    <string name="sharing_text"><![CDATA[Hãy học từ vựng hiệu quả nhờ FCard: https://play.google.com/store/apps/details?id=vn.flearn.app.card&hl=en]]></string>
    <string name="send_via">Chia sẻ qua</string>
    <string name="google_play_url">market://details?id=</string>
    <string name="community_link">https://www.facebook.com/fcardapp/?fref=ts</string>
    <string name="feeback_email">thaivinhloc@gmail.com</string>
    <string name="email_not_found">Không thấy app email để gửi phản hồi :(</string>
    <string name="browser_not_found">Không tìm thấy browser :(</string>
    <string name="sharing_app_not_found">Không tìm thấy app nào để chia sẻ FCard :(</string>
    <string name="choose_email_client">Chọn app email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="please_wait"> Đang load bộ đọc, hãy thử lại trong 3 giây :)</string>
    <string name="word_done">Đã thuộc :)</string>
    <string name="word_difficult">Khó thuộc :(</string>
    <string name="left">"còn "</string>
    <string name="word">" từ"</string>
    <string name="learned">Từ đã thuộc</string>
    <string name="hard">Từ khó thuộc</string>
    <string name="error_tts">Có lỗi, không thể đọc được :(</string>
    <string name="finish">Bạn đã hoàn thành gói từ này! :)</string>
    <string name="press_once_more">Ấn nút back lần nữa để thoát :)</string>
    <string name="alert_reset">Bạn có muốn thiết lập lại không?</string>
    <string name="confirmation">Thiết lập lại</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="confiramation_warning">Xác nhận</string>
    <string name="example">"Vd: "</string>

    <string name="ads_unit">ca-app-pub-1698626424152567/4384549533</string>
    <string name="dialog_wording_ok">Đồng ý</string>
    <string name="dialog_wording_cancel">Bỏ qua</string>

    <string name="update_necessary">Please update if you wish to use to continue.</string>
    <string name="neceesaly_update_dialog">Application version is old.\nPlease update to the lastest version.</string>
    <string name="dialog_wording_update">Update</string>
    <string name="time_out">Download từ lâu hơn dự kiến, vui lòng thử lại :(</string>
    <string name="downloading">Đang tải gói từ lần đầu, vui lòng đợi chút :)</string>
</resources>
