<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    android:padding="5dp" >

    <RelativeLayout
        android:id="@+id/image_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/text_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:text="@string/neceesaly_update_dialog"
            android:textColor="#505050" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/text_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_ll"
        android:layout_centerHorizontal="true"
        android:paddingBottom="20dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/update_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/update_necessary"
            android:textColor="#505050" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/update_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_ll"
        android:layout_centerHorizontal="true"
        android:paddingBottom="20dp"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/dialog_wording_update"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

</RelativeLayout>